feat: add icon selector

--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/date-list-edit/date-list-edit.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/date-list-edit/date-list-edit.component.html
@@ -9,7 +9,7 @@
         <span class="title">Выбор периода</span>
         <div class="add-block">
           <button
-            [icon]="'add-plus'"
+            [icon]="'plus-triangle-down'"
             (click)="add()"
             prizmIconButton
             appearanceType="ghost"
