--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.html
@@ -35,7 +35,7 @@
           <button
             [interactive]="true"
             (click)="filter(input.value); prizmDropdownHostComponent.reCalculatePositions()"
-            prizmInputIconButton="sort-zoom-in"
+            prizmInputIconButton="magnifying-glass"
             prizm-input-right
           ></button>
         </prizm-input-layout>
