--- a/apps/doc/src/app/components/input/input-number/examples/input-number-counter-float-example/input-number-counter-float-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/examples/input-number-counter-float-example/input-number-counter-float-example.component.html
@@ -24,7 +24,7 @@
     [inputNumber]="inputNumber"
     [disabled]="requiredInputControl.disabled"
     [interactive]="!requiredInputControl.disabled"
-    prizmInputIconButton="add-plus"
+    prizmInputIconButton="plus-triangle-down"
     prizmInputNumberAuxiliaryControl="increment"
     prizm-input-right
   ></button>
