--- a/apps/doc/src/app/components/input/input-number/input-number-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/input-number-example.component.html
@@ -112,7 +112,7 @@
               [inputNumber]="inputCounter"
               [disabled]="requiredInputControl.disabled"
               [interactive]="!requiredInputControl.disabled"
-              prizmInputIconButton="add-plus"
+              prizmInputIconButton="plus-triangle-down"
               prizmInputNumberAuxiliaryControl="increment"
               prizm-input-right
             ></button>
