--- a/apps/doc/src/app/components/input/input-select/examples/with-backend-search/select-with-backend-search-example.component.html
+++ b/apps/doc/src/app/components/input/input-select/examples/with-backend-search/select-with-backend-search-example.component.html
@@ -5,6 +5,6 @@
     [searchMatcher]="searchMatcher"
     [formControl]="control"
     (searchChange)="search($any($event))"
-    icon="sort-zoom-in"
+    icon="magnifying-glass"
   ></prizm-input-select>
 </prizm-input-layout>
