--- a/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-hard/panel-example-with-instruments-hard.component.html
+++ b/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-hard/panel-example-with-instruments-hard.component.html
@@ -16,7 +16,7 @@
           size="s"
           appearanceType="ghost"
           appearance="secondary"
-          icon="add-plus"
+          icon="plus-triangle-down"
         ></button>
         <button
           class="instruments__icon"
