--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -41,7 +41,7 @@
             prizmInput
             prizmAutoFocus
           />
-          <button [interactive]="true" prizmInputIconButton="sort-zoom-in" prizm-input-right></button>
+          <button [interactive]="true" prizmInputIconButton="magnifying-glass" prizm-input-right></button>
         </prizm-input-layout>
       </div>
       <ng-container *ngIf="$.filteredItems?.length; else emptyTemplate">
