--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-search/prizm-navigation-menu-search.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-search/prizm-navigation-menu-search.component.html
@@ -2,7 +2,7 @@
   <prizm-input-layout class="prizm-navigation-menu-search__input" label="" size="m">
     <input #searchInput [formControl]="searchFormControl" [placeholder]="placeholder || ''" prizmInput />
     <ng-container prizm-input-right>
-      <button prizmInputIconButton="sort-zoom-in"></button>
+      <button prizmInputIconButton="magnifying-glass"></button>
     </ng-container>
   </prizm-input-layout>
 </div>
