--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-toolbar/prizm-navigation-menu-toolbar.component.html
@@ -51,7 +51,7 @@
           *ngIf="toolbarConfig.search"
           [pseudoPressed]="searchVisible"
           [size]="'m'"
-          [icon]="'sort-zoom-in'"
+          [icon]="'magnifying-glass'"
           [appearance]="'secondary'"
           [appearanceType]="'ghost'"
           (click)="toolbarService.toggleSearch()"
