--- a/apps/doc/src/app/components/input/input-text/examples/input-search-example/input-search-example.component.html
+++ b/apps/doc/src/app/components/input/input-text/examples/input-search-example/input-search-example.component.html
@@ -4,7 +4,7 @@
   <button
     [interactive]="true"
     (click)="search(input.value)"
-    prizmInputIconButton="sort-zoom-in"
+    prizmInputIconButton="magnifying-glass"
     prizm-input-right
   ></button>
 </prizm-input-layout>
@@ -15,7 +15,7 @@
   <button
     [interactive]="true"
     (click)="search(input.value)"
-    prizmInputIconButton="sort-zoom-in"
+    prizmInputIconButton="magnifying-glass"
     prizm-input-right
   ></button>
 </prizm-input-layout>
