--- a/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-simple/panel-example-with-instruments-simple.component.html
+++ b/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-simple/panel-example-with-instruments-simple.component.html
@@ -12,7 +12,7 @@
           size="s"
           appearanceType="ghost"
           appearance="secondary"
-          icon="add-plus"
+          icon="plus-triangle-down"
         ></button>
         <button
           class="instruments__icon"
