--- a/apps/doc/src/app/components/table/examples/table-data-source-example/table-data-source-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-data-source-example/table-data-source-example.component.html
@@ -16,7 +16,7 @@
           <button
             [interactive]="true"
             (click)="search(input.value, 'name')"
-            prizmInputIconButton="sort-zoom-in"
+            prizmInputIconButton="magnifying-glass"
           ></button>
         </th>
       </tr>
