--- a/apps/doc/src/app/components/table/examples/table-server-sort-example/table-server-sort-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-server-sort-example/table-server-sort-example.component.html
@@ -17,7 +17,7 @@
             <button
               [interactive]="true"
               (click)="search(input.value, 'name')"
-              prizmInputIconButton="sort-zoom-in"
+              prizmInputIconButton="magnifying-glass"
             ></button>
           </th>
         </tr>
