--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.html
@@ -114,7 +114,7 @@
               prizmInput
               prizmAutoFocus
             />
-            <button [interactive]="true" prizmInputIconButton="sort-zoom-in" prizm-input-right></button>
+            <button [interactive]="true" prizmInputIconButton="magnifying-glass" prizm-input-right></button>
           </prizm-input-layout>
         </div>
         <ng-container *ngIf="items?.length; else emptyTemplate">
