--- a/libs/components/src/lib/components/tabs/tabs.component.html
+++ b/libs/components/src/lib/components/tabs/tabs.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="control" [class.control_active]="isLeftBtnActive">
     <button
-      [icon]="'arrows-chevron-left'"
+      [icon]="'angle-left'"
       (click)="decrease()"
       prizmIconButton
       appearanceType="ghost"
@@ -51,7 +51,7 @@
       ></button>
     </prizm-dropdown-host>
     <button
-      [icon]="'arrows-chevron-right'"
+      [icon]="'angle-right'"
       (click)="increase()"
       prizmIconButton
       appearanceType="ghost"
