--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.less
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.less
@@ -52,7 +52,7 @@
     &_active_disabled {
       ::ng-deep prizm-wrapper {
         &[data-state='disabled'][data-state='disabled'] {
-          background: var(--prizm-v3-button-disable);
+          background: var(--prizm-button-disable);
         }
       }
     }
