--- a/libs/icons/base/src/styles/icons-full/prizm-full-icons.scss
+++ b/libs/icons/base/src/styles/icons-full/prizm-full-icons.scss
@@ -862,64 +862,65 @@ $prizm-full-icons-map: (
   'user-arrows-swap': '\f44f',
   'user-card': '\f450',
   'user-check': '\f451',
-  'user-circle': '\f452',
-  'user-cross': '\f453',
-  'user-gear': '\f454',
-  'user-group': '\f455',
-  'user-location': '\f456',
-  'user-minus': '\f457',
-  'user-pen': '\f458',
-  'user-plus': '\f459',
-  'user-shield': '\f45a',
-  'user-worker': '\f45b',
-  'user': '\f45c',
-  'users-arrow-right': '\f45d',
-  'users-arrow-up-zql': '\f45e',
-  'users-gear': '\f45f',
-  'users-key': '\f460',
-  'users-location': '\f461',
-  'users-minus': '\f462',
-  'users-plus': '\f463',
-  'users': '\f464',
-  'vector-circle-one-point': '\f465',
-  'vector-circle-two-point': '\f466',
-  'vector-circle': '\f467',
-  'vector-line': '\f468',
-  'vector-point': '\f469',
-  'vector-polygon': '\f46a',
-  'vector-rectangle': '\f46b',
-  'vector-square': '\f46c',
-  'vector-triangle': '\f46d',
-  'vectors-radius': '\f46e',
-  'vial-flask': '\f46f',
-  'vial-plus': '\f470',
-  'vial-rotate-left': '\f471',
-  'vial-xmark': '\f472',
-  'vial': '\f473',
-  'video-cross': '\f474',
-  'video-slash': '\f475',
-  'video': '\f476',
-  'voicemail': '\f477',
-  'volume-cross': '\f478',
-  'volume-low': '\f479',
-  'volume-minus': '\f47a',
-  'volume-off': '\f47b',
-  'volume-plus': '\f47c',
-  'volume-slash': '\f47d',
-  'volume': '\f47e',
-  'wallet': '\f47f',
-  'watch': '\f480',
-  'water-heater': '\f481',
-  'water-pump': '\f482',
-  'webcam': '\f483',
-  'wifi-off': '\f484',
-  'wifi': '\f485',
-  'window': '\f486',
-  'wrench': '\f487',
-  'xmark-column-right': '\f488',
-  'xmark-column-top': '\f489',
-  'xmark-mini': '\f48a',
-  'xmark': '\f48b',
+  'user-chevron': '\f452',
+  'user-circle': '\f453',
+  'user-cross': '\f454',
+  'user-gear': '\f455',
+  'user-group': '\f456',
+  'user-location': '\f457',
+  'user-minus': '\f458',
+  'user-pen': '\f459',
+  'user-plus': '\f45a',
+  'user-shield': '\f45b',
+  'user-worker': '\f45c',
+  'user': '\f45d',
+  'users-arrow-right': '\f45e',
+  'users-arrow-up-zql': '\f45f',
+  'users-gear': '\f460',
+  'users-key': '\f461',
+  'users-location': '\f462',
+  'users-minus': '\f463',
+  'users-plus': '\f464',
+  'users': '\f465',
+  'vector-circle-one-point': '\f466',
+  'vector-circle-two-point': '\f467',
+  'vector-circle': '\f468',
+  'vector-line': '\f469',
+  'vector-point': '\f46a',
+  'vector-polygon': '\f46b',
+  'vector-rectangle': '\f46c',
+  'vector-square': '\f46d',
+  'vector-triangle': '\f46e',
+  'vectors-radius': '\f46f',
+  'vial-flask': '\f470',
+  'vial-plus': '\f471',
+  'vial-rotate-left': '\f472',
+  'vial-xmark': '\f473',
+  'vial': '\f474',
+  'video-cross': '\f475',
+  'video-slash': '\f476',
+  'video': '\f477',
+  'voicemail': '\f478',
+  'volume-cross': '\f479',
+  'volume-low': '\f47a',
+  'volume-minus': '\f47b',
+  'volume-off': '\f47c',
+  'volume-plus': '\f47d',
+  'volume-slash': '\f47e',
+  'volume': '\f47f',
+  'wallet': '\f480',
+  'watch': '\f481',
+  'water-heater': '\f482',
+  'water-pump': '\f483',
+  'webcam': '\f484',
+  'wifi-off': '\f485',
+  'wifi': '\f486',
+  'window': '\f487',
+  'wrench': '\f488',
+  'xmark-column-right': '\f489',
+  'xmark-column-top': '\f48a',
+  'xmark-mini': '\f48b',
+  'xmark': '\f48c',
 );
 
 .prizm-full-icons-agenda-fill:before {
@@ -3468,6 +3469,9 @@ $prizm-full-icons-map: (
 }
 .prizm-full-icons-user-check:before {
   content: map-get($prizm-full-icons-map, 'user-check');
+}
+.prizm-full-icons-user-chevron:before {
+  content: map-get($prizm-full-icons-map, 'user-chevron');
 }
 .prizm-full-icons-user-circle:before {
   content: map-get($prizm-full-icons-map, 'user-circle');
