--- a/apps/doc/src/app/components/buttons/button/examples/icons/icons-buttons-example.component.html
+++ b/apps/doc/src/app/components/buttons/button/examples/icons/icons-buttons-example.component.html
@@ -3,11 +3,9 @@
 <div class="box">
   <div class="title">Pass icon name</div>
   <div class="content">
-    <button [icon]="'account-card-details'" prizmButton>Left Icon</button>
-    <button [iconRight]="'account-card-details'" prizmButton>Right Icon</button>
-    <button [icon]="'account-card-details'" [iconRight]="'account-card-details'" prizmButton>
-      Right and Left Icon
-    </button>
+    <button [icon]="'user-card'" prizmButton>Left Icon</button>
+    <button [iconRight]="'user-card'" prizmButton>Right Icon</button>
+    <button [icon]="'user-card'" [iconRight]="'user-card'" prizmButton>Right and Left Icon</button>
   </div>
 </div>
 
