--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/by-method/by-method-example.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/by-method/by-method-example.component.html
@@ -16,11 +16,5 @@
 </prizm-dropdown-host>
 
 <ng-template #dropdown>
-  <button
-    [icon]="'account-card-details'"
-    prizmIconButton
-    appearanceType="fill"
-    appearance="primary"
-    size="m"
-  ></button>
+  <button [icon]="'user-card'" prizmIconButton appearanceType="fill" appearance="primary" size="m"></button>
 </ng-template>
