--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/with-template/template.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/with-template/template.html
@@ -3,13 +3,7 @@
 </prizm-dropdown-host>
 
 <ng-template #dropdown>
-  <button
-    prizmIconButton
-    appearanceType="fill"
-    [icon]="'account-card-details'"
-    appearance="primary"
-    size="m"
-  ></button>
+  <button prizmIconButton appearanceType="fill" [icon]="'user-card'" appearance="primary" size="m"></button>
   <!--  <prizm-data-list>-->
   <!--    <ng-container header>Заголовок блока</ng-container>-->
   <!--    <div class="box">-->
