--- a/apps/doc/src/app/components/dialogs/sidebar/examples/custom-header-template/custom-header-template.component.html
+++ b/apps/doc/src/app/components/dialogs/sidebar/examples/custom-header-template/custom-header-template.component.html
@@ -5,7 +5,7 @@
     [size]="16"
     [interactive]="true"
     (click)="completeWith(false)"
-    prizmInputIconButton="xmark-circle-fill"
+    prizmInputIconButton="circle-xmark-fill"
   ></button>
 </ng-template>
 
