--- a/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.html
@@ -62,7 +62,7 @@
               *ngIf="currentEditableRow !== item"
               (click)="onRowEditInit(item)"
               size="16"
-              name="filter"
+              name="pencil"
             ></prizm-icons-full>
 
             <!--            <prizm-icon-->
