--- a/apps/doc/src/app/components/input/input-number/examples/input-number-counter-example/input-number-counter-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/examples/input-number-counter-example/input-number-counter-example.component.html
@@ -3,7 +3,7 @@
     [inputNumber]="inputNumber"
     [disabled]="requiredInputControl.disabled"
     [interactive]="!requiredInputControl.disabled"
-    prizmInputIconButton="delete-minus"
+    prizmInputIconButton="minus"
     prizmInputNumberAuxiliaryControl="decrement"
     prizm-input-left
   ></button>
@@ -23,7 +23,7 @@
     [inputNumber]="inputNumber"
     [disabled]="requiredInputControl.disabled"
     [interactive]="!requiredInputControl.disabled"
-    prizmInputIconButton="plus-triangle-down"
+    prizmInputIconButton="plus"
     prizmInputNumberAuxiliaryControl="increment"
     prizm-input-right
   ></button>
