--- a/apps/doc/src/app/components/input/input-number/input-number-example.component.html
+++ b/apps/doc/src/app/components/input/input-number/input-number-example.component.html
@@ -87,7 +87,7 @@
               [inputNumber]="inputCounter"
               [disabled]="requiredInputControl.disabled"
               [interactive]="!requiredInputControl.disabled"
-              prizmInputIconButton="delete-minus"
+              prizmInputIconButton="minus"
               prizmInputNumberAuxiliaryControl="decrement"
               prizm-input-left
             ></button>
@@ -112,7 +112,7 @@
               [inputNumber]="inputCounter"
               [disabled]="requiredInputControl.disabled"
               [interactive]="!requiredInputControl.disabled"
-              prizmInputIconButton="plus-triangle-down"
+              prizmInputIconButton="plus"
               prizmInputNumberAuxiliaryControl="increment"
               prizm-input-right
             ></button>
