fix: hint icon margins added fot navigation menu #1329

--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.less
@@ -52,6 +52,10 @@
     margin: 0;
   }
 
+  &__extra:not(:empty) {
+    margin: 0 8px;
+  }
+
   /* expand icon */
   .expand-button {
     .transition(transform);
