fix: navigation example icon fix

--- a/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-children-handler-example/navigation-menu-children-handler-example.component.html
+++ b/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-children-handler-example/navigation-menu-children-handler-example.component.html
@@ -2,14 +2,14 @@
   <section>
     <prizm-navigation-menu [title]="'With [childrenHandler]'" [toolbarConfig]="toolbarConfig">
       <prizm-navigation-menu-group
-        [icon]="'battery-flash-ok'"
+        [icon]="'carbon'"
         [title]="'Group 1'"
         [groupId]="'group1'"
         [items]="group1"
         [toolbarConfig]="toolbarConfig"
       ></prizm-navigation-menu-group>
       <prizm-navigation-menu-group
-        [icon]="'alerts-pulse'"
+        [icon]="'pulse'"
         [title]="'Group 2 (hidden 3rd lvl children)'"
         [groupId]="'group2'"
         [items]="group2"
