--- a/libs/components/src/lib/components/button/button.component.less
+++ b/libs/components/src/lib/components/button/button.component.less
@@ -10,7 +10,7 @@
   padding: 0;
   border-radius: var(--prizm-button-radius, 2px);
   background: transparent;
-  // TODO 4.0.0: set default min-width 120px according to prizm button component description
+  // TODO 5.0.0: set default min-width 120px/64px according to prizm button component description, reseach needed
   min-width: var(--prizm-button-min-width, unset);
 
   &._focused {
