fix: accordion title hint incorrect position and showing

--- a/apps/doc/src/app/components/accordion/accordion-example.component.html
+++ b/apps/doc/src/app/components/accordion/accordion-example.component.html
@@ -65,7 +65,7 @@
             </span>
           </ng-template>
         </prizm-accordion-item>
-        <prizm-accordion-item [disabled]="disabled" title="Title number 3">
+        <prizm-accordion-item [disabled]="disabled" [title]="'Title number 3'">
           <ng-template prizmAccordionTools>
             <prizm-checkbox [disabled]="disabled" label="Checkbox label is here but..."></prizm-checkbox>
           </ng-template>
