--- a/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.html
+++ b/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.html
@@ -1,5 +1,6 @@
 <div
   class="accordion"
+  #container
   [class.accordion_expanded]="isExpanded"
   [class.accordion_disabled]="disabled"
   [class.accordion_focused]="isAccordionFocused"
