feat: change focus to focus-visible for radiobtn, checkbox, breadcrumbs #1297

--- a/libs/components/src/lib/components/checkbox/checkbox.component.less
+++ b/libs/components/src/lib/components/checkbox/checkbox.component.less
@@ -116,7 +116,7 @@
   }
 }
 
-:host:focus {
+:host:focus-visible {
   .checkbox {
     box-shadow: 0 0 0 2px var(--prizm-background-stroke-focus);
 
