--- a/libs/components/src/lib/components/breadcrumbs/breadcrumbs.component.less
+++ b/libs/components/src/lib/components/breadcrumbs/breadcrumbs.component.less
@@ -53,7 +53,7 @@ span {
 
       &__dots button {
         &:hover,
-        &:focus {
+        &:focus-visible {
           color: var(--prizm-v3-button-primary-solid-hover);
         }
       }
@@ -105,7 +105,7 @@ span {
           }
         }
 
-        &:focus:not(.breadcrumb_active) {
+        &:focus-visible:not(.breadcrumb_active) {
           border-color: var(--prizm-v3-background-stroke-focus);
         }
       }
@@ -155,7 +155,7 @@ span {
     }
 
     &:hover,
-    &:focus {
+    &:focus-visible {
       background: var(--prizm-v3-table-fill-row-hover);
     }
   }
