feat: change focus to focus visible to chips item and input icon btn

--- a/libs/components/src/lib/components/chips/chips-item/chips-item.component.less
+++ b/libs/components/src/lib/components/chips/chips-item/chips-item.component.less
@@ -33,7 +33,7 @@ button {
 
   &:not(:disabled) {
     &:hover,
-    &:focus {
+    &:focus-visible {
       outline: var(--prizm-v3-background-stroke-focus) 1px solid;
     }
   }
@@ -55,7 +55,7 @@ button {
     font-size: 16px;
     color: var(--prizm-v3-status-none-primary-default);
 
-    &:focus {
+    &:focus-visible {
       color: var(--prizm-v3-background-stroke-focus);
     }
   }
