--- a/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.less
+++ b/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.less
@@ -27,7 +27,7 @@
       color: var(--prizm-button-primary-solid-hover);
     }
 
-    &:focus {
+    &:focus-visible {
       color: var(--prizm-button-primary-solid-hover);
     }
 
