fix(chore): stackblitz import style error

--- a/libs/components/src/styles/styles.less
+++ b/libs/components/src/styles/styles.less
@@ -1,6 +1,6 @@
-@import 'dropdown-host';
-@import 'skeleton/skeleton';
-@import 'animations';
+@import 'dropdown-host.less';
+@import 'skeleton/skeleton.less';
+@import 'animations.less';
 
 * {
   box-sizing: border-box;
