--- a/libs/theme/src/styles/theme/index.less
+++ b/libs/theme/src/styles/theme/index.less
@@ -1,8 +1,8 @@
-@import './palette';
-@import './default';
-@import './default-palette';
-@import './dark';
-@import './dark-palette';
+@import './palette.less';
+@import './default.less';
+@import './default-palette.less';
+@import './dark.less';
+@import './dark-palette.less';
 
 :root {
   .prizmV3Palette();
