fix: centeref position of icon in input icon button for new icons pack

--- a/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.less
+++ b/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.less
@@ -1,7 +1,8 @@
 :host {
   outline: none;
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
   flex-shrink: 0;
   border: 0;
   padding: 0;
