--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -19,7 +19,7 @@
   &:hover,
   &:focus-within {
     .prizm-input-button-default {
-      display: block;
+      display: flex;
     }
   }
 }
@@ -190,7 +190,7 @@
     }
 
     .prizm-input-button-default {
-      display: block;
+      display: flex;
     }
   }
 
