fix(doc/input-date-multi): update currentIdx on changes on api page

--- a/apps/doc/src/app/components/input/input-date-multi/input-date-multi.component.html
+++ b/apps/doc/src/app/components/input/input-date-multi/input-date-multi.component.html
@@ -14,8 +14,8 @@
     <prizm-doc-demo>
       <prizm-input-date-multi
         #element
+        [(currentIdx)]="currentIdx"
         [prizmDocHostElement]="element"
-        [currentIdx]="currentIdx"
         [items]="dateTime | prizmCallFunc : getItems : dateRelativeTime"
       >
       </prizm-input-date-multi>
