feat(components/hint): add passing context as $implicit to templatess #291

--- a/apps/doc/src/app/components/hint/hint-example.component.html
+++ b/apps/doc/src/app/components/hint/hint-example.component.html
@@ -11,6 +11,10 @@
       <prizm-hint-with-template-example></prizm-hint-with-template-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="with-context" [content]="exampleWithContext" heading="With Context">
+      <prizm-hint-with-custom-context-example></prizm-hint-with-custom-context-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="with-component" [content]="exampleWithComponent" heading="With Component">
       <prizm-hint-with-component-example></prizm-hint-with-component-example>
     </prizm-doc-example>
