--- a/apps/doc/src/app/components/tooltip/tooltip-example.component.html
+++ b/apps/doc/src/app/components/tooltip/tooltip-example.component.html
@@ -11,6 +11,10 @@
       <prizm-tooltip-with-template-example></prizm-tooltip-with-template-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="with-custom-context" [content]="exampleWithContext" heading="With Context">
+      <prizm-tooltip-with-custom-context-example></prizm-tooltip-with-custom-context-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="with-component" [content]="exampleWithComponent" heading="With Component">
       <prizm-tooltip-with-component-example></prizm-tooltip-with-component-example>
     </prizm-doc-example>
