--- a/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-editable-row-example/table-editable-row-example.component.html
@@ -29,7 +29,7 @@
             prizmInput
           />
         </td>
-        <td *prizmCell="'category'" prizmTd>
+        <td *prizmCell="'category'" prizmTd prizmDropdownHost>
           <prizm-input-select
             [disabled]="currentEditableRow !== item"
             [ngModel]="item.category"
