fix(doc): style in navigation

--- a/apps/doc/src/styles.less
+++ b/apps/doc/src/styles.less
@@ -181,3 +181,7 @@ prizm-doc-page.info-page {
 [hidden] {
   visibility: hidden;
 }
+
+prizm-doc-navigation tui-accordion-item {
+  --tui-base-02: var(--prizm-button-ghost-hover);
+}
