fix(componets/checkbox): fix size

--- a/libs/components/src/lib/components/checkbox/checkbox.component.html
+++ b/libs/components/src/lib/components/checkbox/checkbox.component.html
@@ -11,10 +11,10 @@
     }"
   >
     <ng-container *ngIf="indeterminate === true">
-      <prizm-icons-full [size]="16" name="minus"></prizm-icons-full>
+      <prizm-icons [size]="16" name="minus"></prizm-icons>
     </ng-container>
     <ng-container *ngIf="indeterminate === false && checked === true">
-      <prizm-icons-full [size]="16" name="check"></prizm-icons-full>
+      <prizm-icons [size]="16" name="check"></prizm-icons>
     </ng-container>
   </div>
 </div>
