--- a/libs/components/src/lib/components/checkbox/checkbox.component.less
+++ b/libs/components/src/lib/components/checkbox/checkbox.component.less
@@ -53,11 +53,11 @@
 
     pointer-events: none;
 
-    //&--no-icon {
-    //  &:before {
-    //    content: '';
-    //  }
-    //}
+    &--no-icon {
+      &:before {
+        content: '';
+      }
+    }
 
     &--size-s {
       height: 9px;
