fix(componets/checkbox): fix size

--- a/apps/doc/src/app/components/table/examples/table-filter-example/table-filter-example.component.less
+++ b/apps/doc/src/app/components/table/examples/table-filter-example/table-filter-example.component.less
@@ -13,6 +13,7 @@
     &__category {
       height: 24px;
       width: 24px;
+      margin-left: 4px;
 
       display: flex;
       align-items: center;
