--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/date-list-edit/date-list-edit.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/date-list-edit/date-list-edit.component.html
@@ -8,13 +8,7 @@
         <prizm-icons-full name="calendar-range"></prizm-icons-full>
         <span class="title">Выбор периода</span>
         <div class="add-block">
-          <button
-            [icon]="'plus-triangle-down'"
-            (click)="add()"
-            prizmIconButton
-            appearanceType="ghost"
-            size="m"
-          ></button>
+          <button [icon]="'plus'" (click)="add()" prizmIconButton appearanceType="ghost" size="m"></button>
         </div>
       </div>
       <div class="box">
