--- a/libs/components/src/lib/components/slider/slider-cnob.component.less
+++ b/libs/components/src/lib/components/slider/slider-cnob.component.less
@@ -26,7 +26,7 @@
     background-color: var(--prizm-v3-button-primary-solid-hover);
   }
 
-  &:focus {
+  &:focus-visible {
     z-index: 1000;
     &::before {
       visibility: visible;
