feat: change focus to focus visible to stepper button

--- a/libs/components/src/lib/components/stepper/stepper-selector.component.less
+++ b/libs/components/src/lib/components/stepper/stepper-selector.component.less
@@ -11,7 +11,7 @@
 }
 
 .step {
-  &:focus {
+  &:focus-visible {
     .step__index,
     .step__icon {
       box-shadow: 0 0 0 2px var(--prizm-v3-background-stroke-focus);
