--- a/libs/components/src/lib/components/toggle/toggle.component.less
+++ b/libs/components/src/lib/components/toggle/toggle.component.less
@@ -29,7 +29,7 @@ prizm-wrapper {
     }
   }
 
-  &:focus-within:not(._disabled) {
+  &:has(:focus-visible):not(._disabled) {
     box-shadow: 0 0 0 2px var(--prizm-background-stroke-focus);
     transition: 0.3s;
   }
