--- a/libs/components/src/lib/components/button/button.component.less
+++ b/libs/components/src/lib/components/button/button.component.less
@@ -13,7 +13,7 @@
   // TODO 4.0.0: set default min-width 120px according to prizm button component description
   min-width: var(--prizm-button-min-width, unset);
 
-  &._focused {
+  &._focus-visible {
     box-shadow: 0 0 0 2px var(--prizm-v3-background-stroke-focus);
     transition: 0.3s;
   }
